[package]
name = "macro_find_and_replace"
version = "0.9.0"
authors = ["Noam Elul <noamelul@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides macros to find-and-repalce tokens."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true